--- a/front/index.html
+++ b/front/index.html
@@ -148,7 +148,7 @@
   <script>
     // ✅ CAMBIÁ ESTO por tu URL de Render
     // Ej: https://tu-servicio.onrender.com/predict
-    const API_URL = "http://127.0.0.1:8000/predict";
+    const API_URL = "https://estimadorcostosautos.onrender.com/predict";
 
     // Modelos por marca (arrancá simple y vas agregando)
     const MODELS_BY_BRAND = {
