--- a/front/index.html
+++ b/front/index.html
@@ -39,6 +39,19 @@
           </select>
         </div>
 
+         <!-- Versión (AHORA SELECT LISTADO) -->
+         <div class="sm:col-span-2">
+          <label class="mb-1 block text-sm text-slate-300">Versión / Trim</label>
+          <select id="version_trim" disabled
+            class="w-full rounded-xl border border-white/10 bg-slate-900/60 px-3 py-2 outline-none disabled:opacity-50 focus:ring-2 focus:ring-indigo-500">
+            <option value="">(opcional) Elegí modelo primero</option>
+          </select>
+          <div class="mt-1 text-xs text-slate-400">
+            Se sugieren versiones reales para el modelo elegido.
+          </div>
+        </div>
+
+
         <!-- Año -->
         <div>
           <label class="mb-1 block text-sm text-slate-300">Año *</label>
@@ -57,15 +70,12 @@
             placeholder="Ej: 120000" />
         </div>
 
-        <!-- Combustible -->
+        <!-- Combustible (NUNCA se oculta) -->
         <div>
           <label class="mb-1 block text-sm text-slate-300">Combustible</label>
           <select id="combustible"
             class="w-full rounded-xl border border-white/10 bg-slate-900/60 px-3 py-2 outline-none focus:ring-2 focus:ring-indigo-500">
             <option value="">(opcional)</option>
-            <option value="nafta">Nafta</option>
-            <option value="diesel">Diesel</option>
-            <option value="nafta-gnc">Nafta-GNC</option>
           </select>
           <div id="combHint" class="mt-1 text-xs text-slate-400 hidden"></div>
         </div>
@@ -83,8 +93,8 @@
           <div id="tranHint" class="mt-1 text-xs text-slate-400 hidden"></div>
         </div>
 
-        <!-- Tipo -->
-        <div>
+        <!-- Tipo (se oculta si 0 o 1 opción) -->
+        <div id="tipoWrap">
           <label class="mb-1 block text-sm text-slate-300">Tipo / Carrocería</label>
           <select id="tipo" disabled
             class="w-full rounded-xl border border-white/10 bg-slate-900/60 px-3 py-2 outline-none disabled:opacity-50 focus:ring-2 focus:ring-indigo-500">
@@ -92,7 +102,7 @@
           </select>
         </div>
 
-        <!-- CV -->
+        <!-- CV (bloqueado por defecto; se habilita si hay >1 opciones) -->
         <div>
           <label class="mb-1 block text-sm text-slate-300">CV</label>
           <select id="cvSelect" disabled
@@ -103,26 +113,6 @@
           <div class="mt-1 text-xs text-slate-400">
             Si no lo sabés, dejalo vacío.
           </div>
-        </div>
-
-        <!-- Versión -->
-        <div class="sm:col-span-2">
-          <label class="mb-1 block text-sm text-slate-300">Versión / Trim</label>
-          <input id="version_trim" list="versionList" disabled
-            class="w-full rounded-xl border border-white/10 bg-slate-900/60 px-3 py-2 outline-none disabled:opacity-50 focus:ring-2 focus:ring-indigo-500"
-            placeholder="(opcional) Elegí modelo primero" />
-          <datalist id="versionList"></datalist>
-          <div class="mt-1 text-xs text-slate-400">
-            Se sugieren versiones reales para el modelo elegido.
-          </div>
-        </div>
-
-        <!-- Ubicación -->
-        <div class="sm:col-span-2">
-          <label class="mb-1 block text-sm text-slate-300">Ubicación</label>
-          <input id="ubicacion" type="text"
-            class="w-full rounded-xl border border-white/10 bg-slate-900/60 px-3 py-2 outline-none focus:ring-2 focus:ring-indigo-500"
-            placeholder="Ej: Mar Del Plata - Bs.As. Costa Atlantica" />
         </div>
 
         <div class="sm:col-span-2 mt-2 flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between">
@@ -166,348 +156,40 @@
     </footer>
   </div>
 
-  <script>
-    // ✅ tu API en Render
-    const API_URL = "https://estimadorcostosautos.onrender.com/predict";
+  <!-- LOADER (Tenor) -->
+  <div id="loader" class="fixed inset-0 z-50 hidden items-center justify-center bg-black/60 backdrop-blur-sm">
+    <div class="w-[320px] max-w-[90vw] rounded-2xl border border-white/10 bg-slate-950/70 p-5 text-center shadow-2xl">
+      <div class="text-sm font-semibold text-slate-200">Cargando estimación…</div>
+      <div class="mt-2 text-xs text-slate-400">
+        Cargando su estimación............
+      </div>
 
-    // ✅ este archivo lo genera tu pipeline y queda en /front junto a index.html
-    const CATALOG_URL = "./catalog.json";
+      <div class="mt-4">
+        <div class="tenor-gif-embed"
+          data-postid="16662338746094559779"
+          data-share-method="host"
+          data-aspect-ratio="1"
+          data-width="100%">
+          <a href="https://tenor.com/view/car-cute-driving-electric-funny-gif-16662338746094559779">Car Cute Sticker</a>
+          from <a href="https://tenor.com/search/car-stickers">Car Stickers</a>
+        </div>
+      </div>
 
-    const $ = (id) => document.getElementById(id);
-    let CATALOG = null;
+      <div class="mt-4">
+        <div class="mx-auto h-1.5 w-full overflow-hidden rounded-full bg-white/10">
+          <div class="h-full w-1/2 animate-pulse rounded-full bg-indigo-500/70"></div>
+        </div>
+        <div class="mt-2 text-[11px] text-slate-500">
+          Si tarda demasiado, probá de nuevo (La primera vez siempre tarda más).
+        </div>
+      </div>
+    </div>
+  </div>
 
-        function setHint(el, text) {
-      if (!el) return;
-      if (!text) {
-        el.classList.add("hidden");
-        el.textContent = "";
-      } else {
-        el.textContent = text;
-        el.classList.remove("hidden");
-      }
-    }
+  <!-- Tenor script -->
+  <script async src="https://tenor.com/embed.js"></script>
 
-    function setOptions(selectEl, options, placeholder = "(opcional)") {
-      selectEl.innerHTML = "";
-      const first = document.createElement("option");
-      first.value = "";
-      first.textContent = placeholder;
-      selectEl.appendChild(first);
-
-      (options || []).forEach(v => {
-        const opt = document.createElement("option");
-        opt.value = String(v);
-        opt.textContent = String(v);
-        selectEl.appendChild(opt);
-      });
-    }
-
-    function resetSelect(selectEl, text, disabled = true) {
-      selectEl.innerHTML = "";
-      const opt = document.createElement("option");
-      opt.value = "";
-      opt.textContent = text;
-      selectEl.appendChild(opt);
-      selectEl.disabled = disabled;
-    }
-
-    function fillBrandsFromCatalog() {
-      const brands = Object.keys(CATALOG || {}).sort((a, b) => a.localeCompare(b));
-      const sel = $("marca");
-      sel.innerHTML = `<option value="">Elegí una marca...</option>`;
-      for (const b of brands) {
-        const opt = document.createElement("option");
-        opt.value = b;
-        opt.textContent = b.toUpperCase();
-        sel.appendChild(opt);
-      }
-    }
-
-    function fillModels(brand) {
-      const models = Object.keys((CATALOG?.[brand]) || {}).sort((a, b) => a.localeCompare(b));
-      const sel = $("modelo_base");
-      sel.disabled = false;
-      setOptions(sel, models, "Elegí modelo...");
-    }
-
-    function fillYearsFor(brand, model) {
-      const info = CATALOG?.[brand]?.[model];
-      const sel = $("anio");
-      const hint = $("anioHint");
-
-      if (!info) {
-        resetSelect(sel, "Elegí modelo primero", true);
-        setHint(hint, "");
-        return;
-      }
-
-      sel.disabled = false;
-      sel.innerHTML = `<option value="">Elegí año...</option>`;
-
-      for (let y = info.year_max; y >= info.year_min; y--) {
-        const opt = document.createElement("option");
-        opt.value = String(y);
-        opt.textContent = String(y);
-        sel.appendChild(opt);
-      }
-
-      sel.value = String(info.year_max);
-      setHint(hint, `Rango disponible: ${info.year_min}–${info.year_max}`);
-    }
-
-    function fillTipoVersionFor(brand, model) {
-      const info = CATALOG?.[brand]?.[model];
-
-      // Tipo (select)
-      const tipoSel = $("tipo");
-      if (!info) {
-        resetSelect(tipoSel, "(opcional) Elegí modelo primero", true);
-      } else {
-        tipoSel.disabled = false;
-        setOptions(tipoSel, info.tipos || [], "(opcional) Elegí tipo...");
-      }
-
-      // Versión (datalist + input)
-      const verInput = $("version_trim");
-      const dl = $("versionList");
-      dl.innerHTML = "";
-      verInput.value = "";
-
-      if (!info) {
-        verInput.disabled = true;
-        verInput.placeholder = "(opcional) Elegí modelo primero";
-      } else {
-        verInput.disabled = false;
-        verInput.placeholder = "(opcional) Escribí o elegí una versión...";
-        (info.versiones || []).forEach(v => {
-          const opt = document.createElement("option");
-          opt.value = v;
-          dl.appendChild(opt);
-        });
-      }
-
-      // Hints de combustible/transmisión sugeridos (no obligan)
-      const combHint = $("combHint");
-      const tranHint = $("tranHint");
-
-      if (info?.combustibles?.length) {
-        setHint(combHint, `Sugeridos para este modelo: ${info.combustibles.join(", ")}`);
-      } else {
-        setHint(combHint, "");
-      }
-
-      if (info?.transmisiones?.length) {
-        setHint(tranHint, `Sugeridas: ${info.transmisiones.join(", ")}`);
-      } else {
-        setHint(tranHint, "");
-      }
-    }
-
-    // ===== CV por modelo/trim (del catalog.json) =====
-    function fillCvForSelection() {
-      const brand = $("marca").value;
-      const model = $("modelo_base").value;
-      const trim = ($("version_trim").value || "").trim();
-
-      const sel = $("cvSelect");
-      const hint = $("cvHint");
-
-      if (!brand || !model) {
-        resetSelect(sel, "(opcional) Elegí modelo/versión", true);
-        setHint(hint, "");
-        return;
-      }
-
-      const info = CATALOG?.[brand]?.[model];
-      if (!info) {
-        resetSelect(sel, "(opcional) No hay datos para ese modelo", true);
-        setHint(hint, "");
-        return;
-      }
-
-      const byModel = info.cv_by_model || [];
-      const byTrim = (info.cv_by_trim && trim && info.cv_by_trim[trim]) ? info.cv_by_trim[trim] : [];
-      const options = byTrim.length ? byTrim : byModel;
-
-      if (!options.length) {
-        resetSelect(sel, "No completar para este modelo", true);
-        setHint(hint, "");
-        return;
-      }
-
-      setOptions(sel, options.map(String), "(opcional) Elegí CV...");
-      sel.disabled = false;
-
-      if (byTrim.length) {
-        setHint(hint, `CV sugeridos para la versión "${trim}" (más frecuentes).`);
-      } else {
-        setHint(hint, `CV sugeridos para el modelo (completar versión trim para más precisión).`);
-      }
-    }
-
-    function numOrNull(v) {
-      const t = String(v ?? "").trim();
-      if (!t) return null;
-      const n = Number(t);
-      return Number.isFinite(n) ? n : null;
-    }
-
-    function strOrNull(v) {
-      const t = String(v ?? "").trim();
-      return t ? t : null;
-    }
-
-    function showError(msg) {
-      $("errWrap").textContent = msg;
-      $("errWrap").classList.remove("hidden");
-    }
-
-    function hideError() {
-      $("errWrap").classList.add("hidden");
-      $("errWrap").textContent = "";
-    }
-
-    function showResult({ p10, p50, p90 }) {
-      $("p10").textContent = `USD ${p10}`;
-      $("p50").textContent = `USD ${p50}`;
-      $("p90").textContent = `USD ${p90}`;
-      $("rangeText").textContent = `Rango sugerido: USD ${p10} – USD ${p90} (central: USD ${p50}).`;
-      $("resultWrap").classList.remove("hidden");
-    }
-
-    async function init() {
-      // defaults
-      resetSelect($("modelo_base"), "Primero elegí marca", true);
-      resetSelect($("anio"), "Elegí modelo primero", true);
-      resetSelect($("tipo"), "(opcional) Elegí modelo primero", true);
-      resetSelect($("cvSelect"), "(opcional) Elegí modelo/versión", true);
-
-      $("version_trim").value = "";
-      $("version_trim").disabled = true;
-
-      setHint($("anioHint"), "");
-      setHint($("combHint"), "");
-      setHint($("tranHint"), "");
-      setHint($("cvHint"), "");
-
-      $("kms").value = "120000";
-
-      // cargar catálogo
-      const res = await fetch(CATALOG_URL, { cache: "no-store" });
-      if (!res.ok) throw new Error("No se pudo cargar catalog.json");
-      CATALOG = await res.json();
-      fillBrandsFromCatalog();
-    }
-
-    $("marca").addEventListener("change", (e) => {
-      const brand = e.target.value;
-
-      // reset dependientes
-      resetSelect($("modelo_base"), "Primero elegí marca", true);
-      resetSelect($("anio"), "Elegí modelo primero", true);
-      resetSelect($("tipo"), "(opcional) Elegí modelo primero", true);
-      resetSelect($("cvSelect"), "(opcional) Elegí modelo/versión", true);
-
-      $("version_trim").value = "";
-      $("version_trim").disabled = true;
-
-      setHint($("anioHint"), "");
-      setHint($("combHint"), "");
-      setHint($("tranHint"), "");
-      setHint($("cvHint"), "");
-
-      // opcional: limpiar selecciones opcionales
-      $("combustible").value = "";
-      $("transmision").value = "";
-      $("ubicacion").value = "";
-
-      if (!brand) return;
-      fillModels(brand);
-    });
-
-    $("modelo_base").addEventListener("change", (e) => {
-      const brand = $("marca").value;
-      const model = e.target.value;
-
-      // reset dependientes
-      resetSelect($("anio"), "Elegí modelo primero", true);
-      resetSelect($("tipo"), "(opcional) Elegí modelo primero", true);
-      resetSelect($("cvSelect"), "(opcional) Elegí modelo/versión", true);
-
-      $("version_trim").value = "";
-      $("version_trim").disabled = true;
-
-      setHint($("anioHint"), "");
-      setHint($("combHint"), "");
-      setHint($("tranHint"), "");
-      setHint($("cvHint"), "");
-
-      if (!brand || !model) return;
-
-      fillYearsFor(brand, model);
-      fillTipoVersionFor(brand, model);
-
-      // CV por modelo (sin trim todavía)
-      fillCvForSelection();
-    });
-
-    // cuando el usuario escribe/elige versión, recalculamos CV (por trim si existe)
-    $("version_trim").addEventListener("input", () => {
-      fillCvForSelection();
-    });
-
-    $("form").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      hideError();
-      $("resultWrap").classList.add("hidden");
-
-      const marca = strOrNull($("marca").value);
-      const modelo_base = strOrNull($("modelo_base").value);
-      const anio = Number($("anio").value);
-      const kms = Number($("kms").value);
-
-      if (!marca || !modelo_base || !anio || !kms) {
-        showError("Completá Marca, Modelo, Año y Kms.");
-        return;
-      }
-
-      const payload = {
-        marca,
-        modelo_base,
-        anio,
-        kms,
-
-        // opcionales
-        cv: numOrNull($("cvSelect").value),
-        combustible: strOrNull($("combustible").value),
-        tipo: strOrNull($("tipo").value),
-        transmision: strOrNull($("transmision").value),
-        version_trim: strOrNull($("version_trim").value),
-        ubicacion: strOrNull($("ubicacion").value),
-      };
-
-      // limpiar nulls/vacíos
-      Object.keys(payload).forEach(k => (payload[k] === null || payload[k] === "") && delete payload[k]);
-
-      try {
-        const res = await fetch(API_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload),
-        });
-
-        const data = await res.json();
-        if (!res.ok) {
-          throw new Error(typeof data === "string" ? data : JSON.stringify(data));
-        }
-
-        showResult(data);
-      } catch (err) {
-        showError("No se pudo estimar. Detalle: " + (err.message || err));
-      }
-    });
-
-    init().catch(err => showError(err.message));
-  </script>
+  <!-- JS separado -->
+  <script src="./app.js"></script>
 </body>
 </html>
